syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.publishing.schemas.games";

package com.glance.spaces.zapp.content.publishing.schemas.games;

import "com/glance/spaces/zapp/content/publishing/schemas/common/gaming/game_info.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/element_cta.proto";

message PublishNewArrivalsXlElement {
  //TODO: check this
  common.gaming.GameInfo game_info = 1;
}

