syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.publishing.schemas.games";

package com.glance.spaces.zapp.content.publishing.schemas.games;

import "com/glance/spaces/zapp/content/publishing/schemas/common/title.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/image.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/tag.proto";

message PublishRecentlyPlayedGamesLnElement {
  common.Image bg_image = 1;
  common.Image game_banner = 2;
  common.Title title = 3;
  common.Tag tag = 4;
  string game_name = 5;
  common.Title subtitle = 6;
  common.Image gaming_logo = 7;
}