syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.publishing.schemas.roposo";

package com.glance.spaces.zapp.content.publishing.schemas.roposo;

import "com/glance/spaces/zapp/content/publishing/schemas/common/count.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/label.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/timestamp.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/title.proto";

message PublishEntertainmentVideoLhElement {
  common.Title title = 1;
  common.Timestamp timestamp = 2;
  common.Label label = 3;
  common.Count view_count = 4;
  string destination_url = 5;
  string thumbnail_url = 6;
}