syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.publishing.schemas.sports";

package com.glance.spaces.zapp.content.publishing.schemas.sports;

import "com/glance/spaces/zapp/content/publishing/schemas/common/publish_headlines_xxl_element.proto";

message PublishSportsHeadlinesXxlElement {
  common.PublishHeadlinesXxlElement headlines_xxl_element = 1;
  string leagueId = 2;
  repeated string teamIds = 3;
}

