syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.publishing.schemas.trendz";

package com.glance.spaces.zapp.content.publishing.schemas.trendz;

import "com/glance/spaces/zapp/content/publishing/schemas/common/logo.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/poster.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/tag.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/timestamp.proto";
import "com/glance/spaces/zapp/content/publishing/schemas/common/title.proto";

message PublishTaggedArticleLhElement {
  common.Title title = 1;
  common.Timestamp timestamp = 2;
  common.Logo logo = 3;
  common.Poster poster = 4;
  common.Tag tag = 5;
}

