package com.glance.spaces.zapp.content;

import com.glance.spaces.zapp.content.PublishWidgetContent;
import com.glance.spaces.zapp.content.publishing.schemas.PublishBgInfoXsElement;
import com.glance.spaces.zapp.content.publishing.schemas.common.PublishHeadlinesLnElement;
import com.glance.spaces.zapp.content.publishing.schemas.common.PublishHeadlinesMdElement;
import com.glance.spaces.zapp.content.publishing.schemas.common.PublishRoundupCardElement;
import com.glance.spaces.zapp.content.publishing.schemas.common.PublishRoundupDataElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishCommunityXxlElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishEditorsChoiceXxlElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishFeaturedGameXlElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishInstantGameXxlElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishLeaderboardGameLhElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishLiveStreamXxlElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishNewArrivalsXlElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishPartnerGameXxlElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishRecentlyPlayedGamesLnElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishRecentlyPlayedGamesMdElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishTopInstantGameXlElement;
import com.glance.spaces.zapp.content.publishing.schemas.games.PublishTopThreeMxlElement;
import com.glance.spaces.zapp.content.publishing.schemas.roposo.PublishEntertainmentLnElement;
import com.glance.spaces.zapp.content.publishing.schemas.roposo.PublishEntertainmentMdElement;
import com.glance.spaces.zapp.content.publishing.schemas.roposo.PublishEntertainmentVideoLhElement;
import com.glance.spaces.zapp.content.publishing.schemas.roposo.PublishHotTopicXlElement;
import com.glance.spaces.zapp.content.publishing.schemas.roposo.PublishTrendsXxlElement;
import com.glance.spaces.zapp.content.publishing.schemas.shop.PublishProductDropsLvElement;
import com.glance.spaces.zapp.content.publishing.schemas.sports.PublishMatchLnElement;
import com.glance.spaces.zapp.content.publishing.schemas.sports.PublishMatchXsElement;
import com.glance.spaces.zapp.content.publishing.schemas.sports.PublishMatchXxl;
import com.glance.spaces.zapp.content.publishing.schemas.sports.PublishNbaMatchElement;
import com.glance.spaces.zapp.content.publishing.schemas.sports.PublishOffSeason;
import com.glance.spaces.zapp.content.publishing.schemas.sports.PublishSportsHeadlinesXxlElement;
import com.glance.spaces.zapp.content.publishing.schemas.trendz.PublishCategorisedLvXxlElement;
import com.glance.spaces.zapp.content.publishing.schemas.trendz.PublishTaggedArticleLhElement;
import com.glance.spaces.zapp.content.publishing.schemas.trendz.PublishTaggedArticleLnElement;
import com.google.protobuf.MessageOrBuilder;
import com.zapp.oneweatherzapp.an3;
import com.zapp.oneweatherzapp.bn3;
import com.zapp.oneweatherzapp.cn3;
import com.zapp.oneweatherzapp.dn3;
import com.zapp.oneweatherzapp.fm3;
import com.zapp.oneweatherzapp.fn3;
import com.zapp.oneweatherzapp.gm3;
import com.zapp.oneweatherzapp.gn3;
import com.zapp.oneweatherzapp.hn3;
import com.zapp.oneweatherzapp.im3;
import com.zapp.oneweatherzapp.jm3;
import com.zapp.oneweatherzapp.km3;
import com.zapp.oneweatherzapp.kn3;
import com.zapp.oneweatherzapp.lm3;
import com.zapp.oneweatherzapp.ln3;
import com.zapp.oneweatherzapp.mm3;
import com.zapp.oneweatherzapp.mn3;
import com.zapp.oneweatherzapp.pm3;
import com.zapp.oneweatherzapp.pn3;
import com.zapp.oneweatherzapp.qm3;
import com.zapp.oneweatherzapp.qn3;
import com.zapp.oneweatherzapp.rn3;
import com.zapp.oneweatherzapp.sm3;
import com.zapp.oneweatherzapp.tm3;
import com.zapp.oneweatherzapp.vm3;
import com.zapp.oneweatherzapp.wm3;
import com.zapp.oneweatherzapp.zm3;
/* compiled from: PublishWidgetContentOrBuilder.java */
/* loaded from: classes2.dex */
public interface f extends MessageOrBuilder {
    PublishBgInfoXsElement getBgInfoXsElement();

    fm3 getBgInfoXsElementOrBuilder();

    PublishCommunityXxlElement getCommunityXxlElement();

    im3 getCommunityXxlElementOrBuilder();

    PublishEditorsChoiceXxlElement getEditorsChoiceXxlElement();

    jm3 getEditorsChoiceXxlElementOrBuilder();

    PublishEntertainmentLnElement getEntertainmentLnElement();

    km3 getEntertainmentLnElementOrBuilder();

    PublishEntertainmentMdElement getEntertainmentMdElement();

    lm3 getEntertainmentMdElementOrBuilder();

    PublishEntertainmentVideoLhElement getEntertainmentVideoLh();

    mm3 getEntertainmentVideoLhOrBuilder();

    PublishFeaturedGameXlElement getFeaturedGameXl();

    com.glance.spaces.zapp.content.publishing.schemas.games.c getFeaturedGameXlOrBuilder();

    PublishHeadlinesLnElement getHeadlinesLnElement();

    pm3 getHeadlinesLnElementOrBuilder();

    PublishHeadlinesMdElement getHeadlinesMdElement();

    qm3 getHeadlinesMdElementOrBuilder();

    PublishHotTopicXlElement getHotTopicXlElement();

    sm3 getHotTopicXlElementOrBuilder();

    PublishInstantGameXxlElement getInstantGameXxlElement();

    tm3 getInstantGameXxlElementOrBuilder();

    PublishLeaderboardGameLhElement getLeaderboardGameLh();

    com.glance.spaces.zapp.content.publishing.schemas.games.f getLeaderboardGameLhOrBuilder();

    PublishMatchXxl getLeagueMatchXxl();

    an3 getLeagueMatchXxlOrBuilder();

    PublishLiveStreamXxlElement getLiveStreamXxlElement();

    vm3 getLiveStreamXxlElementOrBuilder();

    PublishMatchLnElement getMatchLnElement();

    wm3 getMatchLnElementOrBuilder();

    PublishMatchXsElement getMatchXsElement();

    zm3 getMatchXsElementOrBuilder();

    PublishNbaMatchElement getNbaMatch();

    com.glance.spaces.zapp.content.publishing.schemas.sports.e getNbaMatchOrBuilder();

    PublishNewArrivalsXlElement getNewArrivalsXlElement();

    bn3 getNewArrivalsXlElementOrBuilder();

    PublishOffSeason getOffSeasonMxl();

    cn3 getOffSeasonMxlOrBuilder();

    PublishPartnerGameXxlElement getPartnerGameXxlElement();

    dn3 getPartnerGameXxlElementOrBuilder();

    PublishProductDropsLvElement getProductDropsLv();

    fn3 getProductDropsLvOrBuilder();

    PublishRecentlyPlayedGamesLnElement getRecentlyPlayedGamesLn();

    gn3 getRecentlyPlayedGamesLnOrBuilder();

    PublishRecentlyPlayedGamesMdElement getRecentlyPlayedGamesMd();

    com.glance.spaces.zapp.content.publishing.schemas.games.l getRecentlyPlayedGamesMdOrBuilder();

    PublishRoundupCardElement getRoundupCardElementLn();

    com.glance.spaces.zapp.content.publishing.schemas.common.n getRoundupCardElementLnOrBuilder();

    PublishRoundupCardElement getRoundupCardElementMd();

    com.glance.spaces.zapp.content.publishing.schemas.common.n getRoundupCardElementMdOrBuilder();

    PublishRoundupDataElement getRoundupDataElement();

    hn3 getRoundupDataElementOrBuilder();

    PublishSportsHeadlinesXxlElement getSportsHeadlinesXxl();

    kn3 getSportsHeadlinesXxlOrBuilder();

    PublishTaggedArticleLhElement getTaggedArticle();

    PublishTaggedArticleLnElement getTaggedArticleLnElement();

    mn3 getTaggedArticleLnElementOrBuilder();

    ln3 getTaggedArticleOrBuilder();

    PublishMatchXxl getTeamMatchXxl();

    an3 getTeamMatchXxlOrBuilder();

    PublishTopInstantGameXlElement getTopInstantGameXl();

    pn3 getTopInstantGameXlOrBuilder();

    PublishCategorisedLvXxlElement getTopStoryCategorisedLvXxl();

    gm3 getTopStoryCategorisedLvXxlOrBuilder();

    PublishTopThreeMxlElement getTopThreeMxlElement();

    qn3 getTopThreeMxlElementOrBuilder();

    PublishTrendsXxlElement getTrendsXxlElement();

    rn3 getTrendsXxlElementOrBuilder();

    PublishWidgetContent.TypedElementCase getTypedElementCase();

    boolean hasBgInfoXsElement();

    boolean hasCommunityXxlElement();

    boolean hasEditorsChoiceXxlElement();

    boolean hasEntertainmentLnElement();

    boolean hasEntertainmentMdElement();

    boolean hasEntertainmentVideoLh();

    boolean hasFeaturedGameXl();

    boolean hasHeadlinesLnElement();

    boolean hasHeadlinesMdElement();

    boolean hasHotTopicXlElement();

    boolean hasInstantGameXxlElement();

    boolean hasLeaderboardGameLh();

    boolean hasLeagueMatchXxl();

    boolean hasLiveStreamXxlElement();

    boolean hasMatchLnElement();

    boolean hasMatchXsElement();

    boolean hasNbaMatch();

    boolean hasNewArrivalsXlElement();

    boolean hasOffSeasonMxl();

    boolean hasPartnerGameXxlElement();

    boolean hasProductDropsLv();

    boolean hasRecentlyPlayedGamesLn();

    boolean hasRecentlyPlayedGamesMd();

    boolean hasRoundupCardElementLn();

    boolean hasRoundupCardElementMd();

    boolean hasRoundupDataElement();

    boolean hasSportsHeadlinesXxl();

    boolean hasTaggedArticle();

    boolean hasTaggedArticleLnElement();

    boolean hasTeamMatchXxl();

    boolean hasTopInstantGameXl();

    boolean hasTopStoryCategorisedLvXxl();

    boolean hasTopThreeMxlElement();

    boolean hasTrendsXxlElement();
}
